--- a/subway_accessibility.rmd
+++ b/subway_accessibility.rmd
@@ -491,753 +491,92 @@ st_dist_calc2 <- function(name, centroid, stations) {
     top_n(-5, ft_dist) %>% 
     mutate(mile_dist = ft_dist / 5280) %>% 
     summarise(
-      mean5_all = mean(mile_dist),
-      med5_all = median(mile_dist)
+      mean5 = mean(mile_dist),
+      med5 = median(mile_dist)
       ) %>% 
     ungroup()
   return(result)
 }
 
 
-all_stations_list <-  map(c("manhattan", "bronx", "brkln_queens"), ~ st_dist_calc2(., tract.cent_test, test3))
-ada_stations_list <- map(c("manhattan", "bronx", "brkln_queens"), ~ st_dist_calc2(., tract.cent_test, test3 %>% filter(ada)))
+all_stations_list <-  map_dfr(c("manhattan", "bronx", "brkln_queens"), ~ st_dist_calc2(., tract.cent_test, test3))
+ada_stations_list <- map_dfr(c("manhattan", "bronx", "brkln_queens"), ~ st_dist_calc2(., tract.cent_test, test3 %>% filter(ada)))
 
 
-man_dist_test %>% 
-  gather("measure", "distance", mean5_all:med5_all) %>% 
+
+
+
+ada_stations_list %>% 
+  gather("measure", "distance", mean5:med5) %>% 
   ggplot(aes(distance, fill = measure)) +
-  geom_histogram(bins = 15) +
+  geom_histogram(bins = 50) +
   facet_wrap(~ measure)
+ada_stations_list %>% 
+  ggplot(aes(mean5, med5)) +
+  geom_point(alpha = 0.5) +
+  geom_abline(slope = 1, intercept = 0, alpha = 0.5, color = "slategrey", size = 2)
+all_stations_list %>% 
+  gather("measure", "distance", mean5:med5) %>% 
+  ggplot(aes(distance, fill = measure)) +
+  geom_histogram(bins = 50) +
+  facet_wrap(~ measure)
+all_stations_list %>% 
+  ggplot(aes(mean5, med5)) +
+  geom_point(alpha = 0.5) +
+  geom_abline(slope = 1, intercept = 0, alpha = 0.5, color = "slategrey", size = 2)
+
 
 nyc.map.4boro %>% 
-  inner_join(man_dist_test, by = "BoroCT2010") %>% 
+  inner_join(all_stations_list, by = "BoroCT2010") %>% 
   ggplot() +
-  geom_sf(aes(fill = med5_all)) +
+  geom_sf(aes(fill = mean5)) +
   scale_fill_viridis_c(option = "D")
-
-
+nyc.map.4boro %>% 
+  inner_join(ada_stations_list, by = "BoroCT2010") %>% 
+  ggplot() +
+  geom_sf(aes(fill = mean5)) +
+  scale_fill_viridis_c(option = "D")
+nyc.map.4boro %>% 
+  inner_join(ada_stations_list, by = "BoroCT2010") %>% 
+  ggplot() +
+  geom_sf(aes(fill = med5)) +
+  scale_fill_viridis_c(option = "D")
 ```
 
 
-
-
-
-
-
-
-
-
-
-Mucking around, trying to see what I have to work with.
-
-```{r looking_over_data, comment=NA, eval=FALSE}
-# What are the cols and how many missing values per col?
-subloc_raw <- subloc_raw %>% 
-  replace_na(
-    list(
-      route1 = "", route2 = "", route3 = "", route4 = "", 
-      route5 = "", route6 = "", route7 = "", route8 = "", 
-      route9 = "", route10 = "", route11 = ""
-      )
-    ) %>% 
-  unite(col = routes, route1:route11, sep = "")
-subloc_raw %>% 
-  is.na %>% 
-  as.data.frame() %>% 
-  sapply(sum)
-ada_raw %>% 
-  is.na %>% 
-  as.data.frame() %>% 
-  sapply(sum)
-# would help future steps to assign a borough to each station - can the ada_raw data be used? 
-subloc_raw %>% 
-  select(line:station_longitude) %>% 
-  distinct() %>% 
-  anti_join(ada_raw, by = c("station_name" = "station"))
-# not many station names match across the two datasets - would take some time to untangle - is there another way?
-test <- subloc_raw %>% 
-  select(line:station_longitude) %>% 
-  distinct() %>% 
-  mutate(join_key = paste(round(station_latitude, 2), round(station_longitude, 2), sep = "_")) %>% 
-  left_join(nyc311_loc %>% 
-              mutate(latitude = round(latitude, 2),
-                     longitude = round(longitude, 2),
-                     join_key = paste(latitude, longitude, sep = "_")) %>% 
-              distinct(), by = "join_key")
-# all of the stations can be assigned a location based on the rounded NYC 311 dataset!
-subloc_bor <- subloc_raw %>% 
-  mutate(join_key = paste(round(station_latitude, 2), round(station_longitude, 2), sep = "_")) %>% 
-  left_join(nyc311_loc %>% 
-              mutate(latitude = round(latitude, 2),
-                     longitude = round(longitude, 2),
-                     join_key = paste(latitude, longitude, sep = "_")) %>% 
-              distinct(), by = "join_key") %>% 
-  # cleanup 
-  select(-join_key, -latitude, -longitude) %>% 
-  select(borough, everything())
-glimpse(subloc_bor)
-
-# after investigating, there are 27 extra rows - some of the nyc 311 locations are wrongly labeled
-
-
-```
-
-The Subway Entrance and Exit data seems to be good enough for an initial analysis. Hopefully the ADA column in that dataset is reliable. Need to compare this with the other datasets collected at some point, but joining is a problem.
-
-To do:
-- check against Wire Monkey's joined dataset
-- figure out the station name inconsistencies?
-
-For now, stick with the sub.location.raw.data for the rest of the analysis.
-
-Map of all subway stations in this dataset:
-
-```{r nyc_stations_map, fig.height=8, fig.width=8, comment=NA, eval=FALSE}
-nyc_map <- get_map(location = "New York City")
-ggmap(nyc_map) +
-  geom_point(data = subloc_bor, aes(x = station_longitude, y = station_latitude, color = borough)) +
-  ylim(40.495992, 40.915568) +  # NYC city limits latitude coordinates
-  xlim(-74.257159, -73.699215) +  # NYC city limits longitude coordinates
-  xlab("longitude") +
-  ylab("latitude") +
-  ggtitle("All NYC Subway Stations\nin the Subway Entrance/Exit Locations Data") +
-  facet_wrap(~borough)
-
-#subloc_bor %>% 
-#  ggplot(aes(x = station_longitude, y = station_latitude, color = borough)) +
-#  geom_point() +
-#  ylim(40.495992, 40.915568) +  # NYC city limits latitude coordinates
-#  xlim(-74.257159, -73.699215) +  # NYC city limits longitude coordinates
-#  xlab("longitude") +
-#  ylab("latitude") +
-#  ggtitle("All NYC Subway Stations\nin the Subway Entrance/Exit Locations Data") +
-#  facet_wrap(~borough)
-
-# there's a couple of wrong assignments - try removing them:
-subloc_bor <- subloc_bor %>% 
-  filter(!(borough == "MANHATTAN" & station_latitude < 40.7)) %>%
-  filter(!(borough == "BRONX" & station_latitude < 40.8))
-ggmap(nyc_map) +
-  geom_point(data = subloc_bor, aes(x = station_longitude, y = station_latitude, color = borough)) +
-  ylim(40.495992, 40.915568) +  # NYC city limits latitude coordinates
-  xlim(-74.257159, -73.699215) +  # NYC city limits longitude coordinates
-  xlab("longitude") +
-  ylab("latitude") +
-  ggtitle("All NYC Subway Stations\nin the Subway Entrance/Exit Locations Data") +
-  facet_wrap(~borough)
-test <- subloc_bor %>% 
-  filter(borough == "BRONX" & station_latitude < 40.8)
-ggmap(nyc_map) +
-  geom_point(data = test, aes(x = station_longitude, y = station_latitude)) +
-  ylim(40.495992, 40.915568) +
-  xlim(-74.257159, -73.699215)
-
-odd <- subloc_bor %>% 
-  select(borough:station_name) %>% 
-  distinct() %>% 
-  group_by(division, line, station_name) %>% 
-  count() %>% 
-  filter(n > 1) %>% 
-  arrange(station_name)
-test2 <- subloc_bor %>% 
-  select(borough:station_longitude) %>% 
-  distinct() %>% 
-  filter(division %in% odd$division & station_name %in% odd$station_name & line %in% odd$line) %>% 
-  arrange(station_latitude, station_longitude, borough)
-# doesn't matter if the two annotations are QUEENS and BROOKLYN - will be treated together, but mixups that involve BRONX and MANHATTAN would be helpful to fix
-test3 <- test2 %>% 
-  filter(station_latitude > 40.70442) %>% 
-  arrange(station_longitude, station_latitude, borough)
-test3.brnx.man <- test3 %>% 
-  filter(borough == "MANHATTAN" | borough == "BROND")
-test4 <- test3 %>%
-  filter(station_name %in% test3.brnx.man$station_name)
-test4 %>% 
-  select(division, line, station_name) %>% 
-  distinct()
-subloc_bor <- subloc_bor %>% 
-  filter(!(division == "IND" & line == "6 Avenue" & station_name == "East Broadway" & borough == "BROOKLYN")) %>% 
-  filter(!(division == "IRT" & line == "Jerome" & station_name == "149th St-Grand Concourse" & borough == "MANHATTAN")) %>% 
-  filter(!(division == "IRT" & line == "Pelham" & station_name == "138th St-3rd Ave" & borough == "MANHATTAN")) %>% 
-  filter(!(division == "IRT" & line == "Broadway-7th Ave" & station_name == "207th St" & borough == "BRONX")) 
-# The F train Roosevelt Island stop is both Queens and Manhattan - leave it as such
-# The Marble Hill - 225th St stop is also an odd station - leave as both Manhattan and Bronx
-ggmap(nyc_map) +
-  geom_point(data = subloc_bor, aes(x = station_longitude, y = station_latitude, color = borough)) +
-  ylim(40.495992, 40.915568) +  # NYC city limits latitude coordinates
-  xlim(-74.257159, -73.699215) +  # NYC city limits longitude coordinates
-  xlab("longitude") +
-  ylab("latitude") +
-  ggtitle("All NYC Subway Stations\nin the Subway Entrance/Exit Locations Data") +
-  facet_wrap(~borough)
-```
-
-Notes:
-- No stations on Staten Island - will exclude Saten Island from this point on
-- Most stations have more than one row (multiple entrances/exits) - need to compress info
-- Station names in the station column are NOT unique (multiple 103rd St, etc) in the entrance/exit data, but station location may be a unique and consistent handle to grab all the entrances/exits associated with a station
-- For now, will call any station that has at least one ADA-accessible entrance/exit "accessible", but we know that some stations are only partially accessible. For some station, different subway lines are serviced by different platforms within the same station, and not all platforms are fully accessible. This is where the elevator/escalator data joining may be useful. 
-
-```{r ada_check, comment=NA, eval=FALSE}
-# some info about entrances
-subloc_bor %>% 
-  ggplot(aes(x = entrance_type, fill = ada)) +
-  geom_bar() +
-  xlab("Entrance Type")
-# same scale
-subloc_bor %>% 
-  ggplot(aes(x = entrance_type, fill = ada)) +
-  geom_bar(position = "fill") +
-  xlab("Entrance Type") +
-  ylab("Proportion of Entrance that is ADA-Accessible")
-```
-
-According to the description of the variables in this dataset, `ADA == TRUE` indicates that the station is ADA-Accessible, but not necessarily if that entrance is
-
-```{r, fig.height=8, fig.width=8, comment=NA, eval=FALSE}
-ggmap(nyc_map) +
-  geom_point(
-    data = subloc_bor, 
-    aes(x = station_longitude, y = station_latitude, color = ada),
-    size = 1.5,
-    alpha = 0.5) +
-  ylim(40.55, 40.915568) +  # NYC city limits latitude coordinates
-  xlim(-74.1, -73.699215) +  # NYC city limits longitude coordinates
-  xlab("longitude") +
-  ylab("latitude") +
-  ggtitle("All NYC Subway Stations\nIn the Subway Entrance/Exit Locations Dataset\nColor by Accessibility")
-# this data is missing the new Q-line information 
-```
-
-##Get (long,lat) pair locations from all over NYC
-
-Now the next questions is how do I "sample" points from the area of NYC? 
-
-I've worked a little bit with the NYC 311 call dataset before. Source: https://nycopendata.socrata.com/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9
-
-Remembered that it has latitude/longitude location info for the calls. Grabbed the locations from the 2015 NYC 311 calls data - use as random sample?
-
-```{r nyc_locations, fig.height=8, fig.width=8, comment=NA, eval=FALSE}
-nyc311_loc %>% 
-  ggplot(aes(x = longitude, y = latitude)) +
-  geom_bin2d(bins = 400) +
-  coord_quickmap() +
-  scale_fill_viridis() +
-  ggtitle("Locations in the 2015 NYC 311 Calls Dataset")
-```
-
-Not bad. Empty areas are parks probably, should be okay to not include those.
-
-```{r more_cleanup, comment=NA, eval=FALSE}
-# create unique handle using station name, division, and line columns
-subloc_bor <- subloc_bor %>% 
-  mutate(station_id = paste(division, line, station_name, sep = " / ")) %>% 
-  select(borough, station_id, everything())
-subloc_sml <- subloc_bor %>% 
-  select(station_id, borough:routes, ada) %>% 
-  distinct()
-glimpse(subloc_sml)
-not.uni <- subloc_sml %>% 
-  group_by(station_id) %>% 
-  count() %>% 
-  filter(n > 1)
-subloc_sml_prob <- subloc_sml %>% 
-  filter(station_id %in% not.uni$station_id) %>% 
-  arrange(station_id)
-# there's some dublicate stations still, must have had several station locations associated with those
-subloc_sml <- subloc_sml %>% 
-  group_by(station_id) %>% 
-  mutate(avg_lat = mean(station_latitude)) %>% 
-  mutate(avg_long = mean(station_longitude)) %>% 
-  select(station_id:borough, avg_lat:avg_long, routes, ada) %>% 
-  ungroup() %>% 
-  distinct()
-nrow(subloc_sml)
-length(subloc_sml$station_id)
-ggmap(nyc_map) +
-  geom_point(data = subloc_sml, aes(x = avg_long, y = avg_lat, color = borough)) +
-  ylim(40.495992, 40.915568) +  # NYC city limits latitude coordinates
-  xlim(-74.257159, -73.699215) +  # NYC city limits longitude coordinates
-  xlab("longitude") +
-  ylab("latitude") +
-  ggtitle("All NYC Subway Stations\nin the Subway Entrance/Exit Locations Data") +
-  facet_wrap(~borough)
-```
-
-There's still some duplicates in the stations that have slightly different route assignments, but similar location. I'm going to leave them in for now, not sure what to do with them.
-
-##Calculate distances between random location in NYC and the closest subway station
-
-Small-scale test on a tiny portion of the subway stations and the 311 locations:
-
-```{r small_scale_test, comment=NA, eval=FALSE}
-# small scale test
-# pick 10 locations in NYC and find the distance from that point to 5 stations in the city
-loc_test <- nyc311_loc %>% 
-  sample_n(10, replace = FALSE)
-t1 <- rbind(subloc_sml$station_id, subloc_sml$station_id)
-t2 <- as.data.frame(rbind(t1, t1, t1, t1, t1), stringsAsFactors = FALSE)
-colnames(t2) <- paste("stat", 1:ncol(t2), sep = "")
-t3 <- t2 %>% select(1:5)
-t3
-
-dist_test <- bind_cols(loc_test, t3) %>%
-  gather(key = "station.num", value = "station_id", 4:8) %>% 
-  arrange(station.num)
-# each of the 10 (long,lat) points is now paired with each of the 5 stations selected
-dist_test
-# link the station.id to a (long,lat) pair for that station: 
-dist_test_w_stat_loc <- dist_test %>% 
-  inner_join(subloc_sml, by = "station_id")
-# now calculate distance between point and the station using the geosphere package:
-dist.test.res <- dist_test_w_stat_loc  %>% 
+```{r}
+diff_stations <- all_stations_list %>% 
+  inner_join(ada_stations_list %>% select(-BoroName), by = "BoroCT2010", suffix = c("_all", "_ada")) %>% 
   mutate(
-    dist.to.stat = distGeo(
-      # p1 = NYC 311 location
-      p1 = as.matrix(dist_test_w_stat_loc %>% select(longitude, latitude)), 
-      # p2 = subway station location
-      p2 = as.matrix(dist_test_w_stat_loc  %>% select(avg_long, avg_lat))
-      ) * 0.000621371  # convert meters to miles
-    ) %>% 
-  mutate(loc.id = paste(borough.y, latitude, longitude, sep = " / "))
-```
-
-Note: the distances are based on direct distance from point to point
-
-To do:
-- Is there some way to incorporate Manhattan Distance into the calculation to get a more accurate distance measurement?  
-
-What's the distance from the NYC 311 point to the closest station (out of the 5):
-
-```{r, fig.height=8, fig.width=8, comment=NA, eval=FALSE}
-dim(dist.test.res)
-dist.test.nearest <- dist.test.res %>% 
-  group_by(loc.id) %>% 
-  summarize(nearest.stat = min(dist.to.stat)) %>% 
-  ungroup() %>% 
-  inner_join((dist.test.res %>% select(longitude, latitude, loc.id)), by = "loc.id") %>% 
-  unique()
-dim(dist.test.nearest)
-ggmap(nyc_map) +
-  geom_point(data = dist.test.nearest, aes(x = longitude, y = latitude, color = nearest.stat), size = 3) +
-  scale_color_viridis(option = "B")  +
-  ylim(40.55, 40.915568) +  # NYC city limits latitude coordinates
-  xlim(-74.1, -73.699215) +  # NYC city limits longitude coordinates
-  xlab("Longitude") +
-  ylab("Latitude") +
-  ggtitle("Direct distance to nearest subway station from point in NYC")
-```
-
-Test run with a small fraction of the data seems to have worked, now to tackle the full data.
-
-##Full scale calculation for all points in the 311 calls dataset and all subway stations
-
-###Run the following chunk at your own risk. R took up >40GB of RAM at some points for me.
-
-(It's currently set to not evaluate)
-
-I exported the distance to any nearest subway station to any point and the distance to the nearest ada subway station into csv files. They're imported in the next chunk.
-
-```{r full_dist_calc, comment=NA, eval=FALSE}
-glimpse(nyc311_loc)
-glimpse(subloc_sml)
-nyc311_loc <- nyc311_loc %>% 
-  mutate(
-    borough = ifelse(
-      borough == "MANHATTAN", "MANHATTAN",
-      ifelse(
-        borough == "BRONX", "BRONX", 
-        ifelse(
-          borough == "BROOKLYN", "BROOKLYN_QUEENS", "BROOKLYN_QUEENS"
-          )
-        )
-      )
-    )
-subloc_sml <- subloc_sml %>% 
-  mutate(
-    borough = ifelse(
-      borough == "MANHATTAN", "MANHATTAN",
-      ifelse(
-        borough == "BRONX", "BRONX", 
-        ifelse(
-          borough == "BROOKLYN", "BROOKLYN_QUEENS", "BROOKLYN_QUEENS"
-          )
-        )
-      )
-    )
-set.seed(2001)
-test <- nyc311_loc %>% 
-  sample_frac(0.001, replace = FALSE) %>% 
-  full_join(subloc_sml, by = "borough") 
-distances <- test %>% 
-  mutate(
-    dist.to.stat = distGeo(
-      # p1 = NYC 311 location
-      p1 = as.matrix(test %>% select(longitude, latitude)), 
-      # p2 = subway station location
-      p2 = as.matrix(test %>% select(avg_long, avg_lat))
-      ) * 0.000621371  # convert meters to miles
-    ) %>% 
-  mutate(loc_id = paste(borough, latitude, longitude, sep = " / "))
-min.distance <- distances %>% 
-  group_by(loc_id) %>% 
-  summarize(nearest.stat = min(dist.to.stat)) %>% 
-  ungroup() %>% 
-  inner_join((distances %>% select(longitude, latitude, loc_id)), by = "loc_id") %>% 
-  unique()
-nyc_loc_full_join <- nyc311_loc %>% 
-  full_join(subloc_sml, by = "borough") 
-p1 <- as.matrix(nyc_loc_full_join %>% select(longitude, latitude))
-p2 <- as.matrix(nyc_loc_full_join %>% select(avg_long, avg_lat))
-dist.to.stat <- distGeo(
-      # p1 = NYC 311 location
-      p1 = p1, 
-      # p2 = subway station location
-      p2 = p2
-      ) * 0.000621371
-nyc_loc_full_join$dist.to.stat <- dist.to.stat
-nyc_loc_full_join$loc_id <- paste(nyc_loc_full_join$borough, nyc_loc_full_join$latitude, nyc_loc_full_join$longitude, sep = " / ")
-
-nyc_loc_full_join %>% 
-  summarize(
-    mean.dist = mean(dist.to.stat),
-    med.dist = median(dist.to.stat)
-    )
-nyc_loc_full_join %>% 
-  ggplot(aes(dist.to.stat)) +
-  geom_histogram(bins = 100) +
-  geom_vline(xintercept = mean(dist.to.stat), color = "#E69F00", size = 2, alpha = 0.8) +
-  geom_vline(xintercept = median(dist.to.stat), color = "#56B4E9", size = 2, alpha = 0.8) +
-  ggtitle("Histogram of distances to all stations") +
-  xlab("Distance from point in NYC to subway station\nWithin burrough") 
-nyc_loc_full_join %>% 
-  ggplot(aes(sqrt(dist.to.stat))) +
-  geom_histogram(bins = 100) +
-  geom_vline(xintercept = mean(sqrt(dist.to.stat)), color = "#E69F00", size = 2, alpha = 0.8) +
-  geom_vline(xintercept = median(sqrt(dist.to.stat)), color = "#56B4E9", size = 2, alpha = 0.8) +
-  ggtitle("Histogram of square root of distances to all stations") +
-  xlab("Square Root of distance from point in NYC to subway station\nWithin burrough") 
-
-nyc_loc_full_join %>%
-  ggplot(aes(dist.to.stat)) +
-  geom_histogram(bins = 100) +
-  geom_vline(xintercept = mean(dist.to.stat), color = "#E69F00", size = 2, alpha = 0.8) +
-  geom_vline(xintercept = median(dist.to.stat), color = "#56B4E9", size = 2, alpha = 0.8) +  
-  ggtitle("Histogram of distances to ADA-Accessible stations only") +
-  xlab("Distance from point in NYC to ADA-accessible subway station\nWithin burrough") +
-  facet_wrap(~ada, nrow = 1)
-
-
-all.distance <- nyc_loc_full_join %>% 
-  select(-c(station_id, routes)) %>% 
-  distinct() %>% 
-  group_by(loc_id, borough, latitude, longitude) %>% 
-  summarize(
-    nearest.stat = min(dist.to.stat),
-    mean.dist = mean(dist.to.stat),
-    med.dist = median(dist.to.stat)
-    ) %>% 
-  ungroup() 
-all.distance %>% 
-  select(loc_id, nearest.stat:med.dist) %>% 
-  gather(key = "Dist.type", value = "Distance", -loc_id) %>% 
-  ggplot(aes(Distance)) +
-  geom_histogram(bins = 50) +
-  facet_wrap(~ Dist.type, nrow = 2)
-all.distance %>% 
-  select(loc_id, nearest.stat:med.dist) %>% 
-  gather(key = "Dist.type", value = "Distance", -loc_id) %>% 
-  ggplot(aes(Distance)) +
-  geom_histogram(bins = 50) +
-  facet_wrap(~ Dist.type, nrow = 1)
-all.distance %>% 
-  select(loc_id, borough, mean.dist:med.dist) %>% 
-  gather(key = "Dist.type", value = "Distance", mean.dist:med.dist) %>% 
-  ggplot(aes(Distance)) +
-  geom_histogram(bins = 50) +
-  facet_wrap(Dist.type ~ borough)
-
-ada.distance <- nyc_loc_full_join %>% 
-  filter(ada) %>% 
-  select(-c(station_id, routes)) %>% 
-  distinct() %>% 
-  group_by(loc_id, borough, latitude, longitude) %>% 
-  summarize(
-    nearest.ada.stat = min(dist.to.stat),
-    mean.ada.stat = mean(dist.to.stat),
-    med.ada.stat = median(dist.to.stat)
-    ) %>% 
-  ungroup()
-ada.distance %>% 
-  select(loc_id, nearest.ada.stat:med.ada.stat) %>% 
-  gather(key = "Dist.type", value = "Distance", -loc_id) %>% 
-  ggplot(aes(Distance)) +
-  geom_histogram(bins = 50) +
-  facet_wrap(~ Dist.type, nrow = 2)
-ada.distance %>% 
-  select(loc_id, mean.ada.stat:med.ada.stat) %>% 
-  gather(key = "Dist.type", value = "Distance", -loc_id) %>% 
-  ggplot(aes(Distance)) +
-  geom_histogram(bins = 50) +
-  facet_wrap(~ Dist.type, nrow = 1)
-ada.distance %>% 
-  select(loc_id, borough, mean.ada.stat:med.ada.stat) %>% 
-  gather(key = "Dist.type", value = "Distance", mean.ada.stat:med.ada.stat) %>% 
-  ggplot(aes(Distance)) +
-  geom_histogram(bins = 50) +
-  facet_wrap(Dist.type ~ borough)
-### top 5
-all.top5.distance <- nyc_loc_full_join %>% 
-  select(-c(station_id, routes)) %>% 
-  distinct() %>% 
-  group_by(loc_id, borough, latitude, longitude) %>% 
-  top_n(-5, dist.to.stat) %>% 
-  summarize(
-    mean.top5.all = mean(dist.to.stat),
-    med.top5.all = median(dist.to.stat)
-  ) %>% 
-  ungroup()
-ada.top5.distance <- nyc_loc_full_join %>% 
-  filter(ada) %>% 
-  select(-c(station_id, routes)) %>% 
-  distinct() %>% 
-  group_by(loc_id, borough, latitude, longitude) %>% 
-  top_n(-5, dist.to.stat) %>% 
-  summarize(
-    mean.top5.ada = mean(dist.to.stat),
-    med.top5.ada = median(dist.to.stat)
-  ) %>% 
-  ungroup()
-all.top5.distance %>% 
-  select(loc_id, mean.top5.all:med.top5.all) %>% 
-  gather(key = "Dist.type", value = "Distance", -loc_id) %>% 
-  ggplot(aes(Distance)) +
-  geom_histogram(bins = 100) +
-  facet_wrap(~Dist.type)
-ada.top5.distance %>% 
-  select(loc_id, mean.top5.ada:med.top5.ada) %>% 
-  gather(key = "Dist.type", value = "Distance", -loc_id) %>% 
-  ggplot(aes(Distance)) +
-  geom_histogram(bins = 100) +
-  facet_wrap(~Dist.type)
-```
-
-####Plots of the results
-
-Distance to any type of station from a particular point in NYC: 
-
-```{r plot_any_dist_calc, fig.height=8, fig.width=8, comment=NA, eval=FALSE}
-all.distance %>% 
-  ggplot(aes(x = longitude, y = latitude, color = nearest.stat)) +
-  geom_point(size = 0.2, alpha = 0.2) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap() +
-  ggtitle("Direct distance to any nearest subway station from point in NYC")
-all.distance %>% 
-  ggplot(aes(x = longitude, y = latitude, color = mean.dist)) +
-  geom_point(size = 0.2, alpha = 0.2) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap() +
-  ggtitle("Direct distance to any nearest subway station from point in NYC")
-ada.distance %>% 
-  ggplot(aes(x = longitude, y = latitude, color = nearest.ada.stat)) +
-  geom_point(size = 0.25, alpha = 0.2) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap() +
-  ggtitle("Direct distance to nearest ADA-Accessible subway station from point in NYC")
-ada.distance %>% 
-  ggplot(aes(x = longitude, y = latitude, color = mean.ada.stat)) +
-  geom_point(size = 0.25, alpha = 0.2) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap() +
-  ggtitle("Direct distance to nearest ADA-Accessible subway station from point in NYC")
-all.top5.distance %>% 
-  ggplot(aes(x = longitude, y = latitude, color = mean.top5.all)) +
-  geom_point(size = 0.2, alpha = 0.2) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap()
-ada.top5.distance %>% 
-  ggplot(aes(x = longitude, y = latitude, color = mean.top5.ada)) +
-  geom_point(size = 0.2, alpha = 0.2) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap()
-
-
-ggmap(nyc_map) +
-  geom_point(data = all.distance, aes(x = longitude + 0.002, y = latitude - 0.002, color = mean.dist), size = 0.4, alpha = 0.5) +
-  scale_color_viridis(option = "B")  +
-  ylim(40.55, 40.915568) +  # NYC city limits latitude coordinates
-  xlim(-74.1, -73.699215) +  # NYC city limits longitude coordinates
-  xlab("longitude") +
-  ylab("latitude") +
-  ggtitle("Direct distance to any nearest subway station from point in NYC")
-```
-
-
-Unsurprisingly, some areas are just far from any subway stations and that carries over into what areas are far from ADA stations. 
-
-```{r combining_distances, comment=NA, eval=FALSE}
-dist.merge <- all.distance %>% 
-  inner_join(
-    ada.distance %>% select(-(borough:longitude)), 
-    by = "loc_id"
-    ) %>% 
-  inner_join(
-    all.top5.distance %>% select(-(borough:longitude)),
-    by = "loc_id"
-  ) %>% 
-  inner_join(
-    ada.top5.distance %>% select(-(borough:longitude)),
-    by = "loc_id"
+    mean_diff = mean5_ada - mean5_all,
+    med_diff = med5_ada - med5_all
   )
-glimpse(dist.merge)
-# sanity checks for joining:
-sapply(all.distance, anyNA)
-sapply(ada.distance, anyNA)
-sapply(dist.merge, anyNA)
-# joining seems ok
-dist.merge <- dist.merge %>% 
-  mutate(
-    # normalize dist to nearest station by subtraction
-    any.vs.ada.min.dist = nearest.ada.stat - nearest.stat,
-    # normalize dist to nearest station by division
-    any.vs.ada.min.ratio = nearest.ada.stat / nearest.stat,
-    # repeat for means
-    any.vs.ada.mean.dist = mean.ada.stat - mean.dist,
-    any.vs.ada.mean.ratio = mean.ada.stat / mean.dist,
-    # repeat for med
-    any.vs.ada.med.dist = med.ada.stat - med.dist,
-    any.vs.ada.med.ratio = med.ada.stat / med.dist,
-    # repeat for closest 5 stations means
-    top5.any.vs.ada.mean.dist = mean.top5.ada - mean.top5.all,
-    top5.any.vs.ada.mean.ratio = mean.top5.ada / mean.top5.all,
-    # repeat for closes 5 station medians
-    top5.any.vs.ada.med.dist = med.top5.ada - med.top5.all,
-    top5.any.vs.ada.med.ratio = med.top5.ada / med.top5.all
-    ) %>% 
-  select(loc_id:longitude, starts_with("any.vs.ada"), starts_with("top5.any.vs.ada"))
-glimpse(dist.merge)
-```
-
-Histogram of the distances:
-
-```{r, fig.height=4, fig.width=8, comment=NA, eval=FALSE}
-dist.merge %>% 
-  select(loc_id:borough, ends_with(".dist")) %>% 
-  rename(
-    "Minimum_Diff" = any.vs.ada.min.dist,
-    "Mean_Diff" = any.vs.ada.mean.dist,
-    "Med_Diff" = any.vs.ada.med.dist,
-    "Closest_5Stations_Mean_Diff" = top5.any.vs.ada.mean.dist,
-    "Closest_5Stations_Med_Diff" = top5.any.vs.ada.med.dist) %>% 
-  gather(key = "Dist.type", value = "Norm_Distance", -(loc_id:borough)) %>% 
-  ggplot(aes(x = Norm_Distance)) +
-  geom_histogram(bins = 100) +
-  facet_wrap(~Dist.type) +
-  xlab("Normalized Distance (miles)") +
-  ggtitle("Difference in distance\nBetween nearest ADA-Accessible subway station and any subway station")
-dist.merge %>% 
-  ggplot(aes(any.vs.ada.min.dist)) +
-  geom_histogram(bins = 100)
-dist.merge %>% 
-  ggplot(aes(any.vs.ada.med.dist)) +
-  geom_histogram(bins = 100)
-dist.merge %>% 
-  ggplot(aes(top5.any.vs.ada.mean.dist)) +
-  geom_histogram(bins = 100)
-dist.merge %>% 
-  ggplot(aes(top5.any.vs.ada.med.dist)) +
-  geom_histogram(bins = 100)
-dist.merge %>% 
-  select(loc_id:borough, ends_with(".ratio")) %>%
-  select(-any.vs.ada.min.ratio) %>% 
-  rename(
-    "Mean_Ratio" = any.vs.ada.mean.ratio,
-    "Med_Ratio" = any.vs.ada.med.ratio,
-    "Closest_5Stations_Mean_Ratio" = top5.any.vs.ada.mean.ratio,
-    "Closest_5Stations_Med_Ratio" = top5.any.vs.ada.med.ratio
-  ) %>% 
-  gather(key = "Dist.type", value = "Norm_Distance", -(loc_id:borough)) %>% 
-  ggplot(aes(x = Norm_Distance)) +
-  geom_histogram(bins = 100) +
-  facet_wrap(~Dist.type) +
-  xlab("Ratio") +
-  ggtitle("Ratio in distance\nBetween nearest ADA-Accessible subway station and any subway station")
-dist.merge %>% 
-  ggplot(aes(any.vs.ada.mean.ratio)) +
-  geom_histogram(bins = 100)
-dist.merge %>% 
-  ggplot(aes(any.vs.ada.med.ratio)) +
-  geom_histogram(bins = 100)
-dist.merge %>% 
-  ggplot(aes(top5.any.vs.ada.mean.ratio)) +
-  geom_histogram(bins = 100)
-dist.merge %>% 
-  ggplot(aes(top5.any.vs.ada.med.ratio)) +
-  geom_histogram(bins = 100)
-```  
-
-Maps of the normalized distances to ADA-Accessible stations:
-  
-```{r norm_subtract_viz, fig.width=8, fig.height=8, comment=NA, eval=FALSE}
-### subtraction normalization
-dist.merge %>% 
-  ggplot(aes(x = longitude, y = latitude, color = any.vs.ada.min.dist)) +
-  geom_point(size = 0.1) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap() +
-  ggtitle("Direct distance to nearest ADA-accessible subway station from point in NYC\nNormalized to distance to nearest any kind of subway station (subtraction)") +
-  xlab("Longitude") +
-  ylab("Latitude")
-dist.merge %>% 
-  ggplot(aes(x = longitude, y = latitude, color = any.vs.ada.min.dist)) +
-  geom_point(size = 0.2, alpha = 0.3) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap() +
-  ggtitle("Direct distance to nearest ADA-accessible subway station from point in NYC\nNormalized to distance to nearest any kind of subway station (subtraction)") +
-  xlab("Longitude") +
-  ylab("Latitude")
-dist.merge %>% 
-  ggplot(aes(x = longitude, y = latitude, color = any.vs.ada.med.ratio)) +
-  geom_point(size = 0.2, alpha = 0.3) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap()
-dist.merge %>% 
-  ggplot(aes(x = longitude, y = latitude, color = top5.any.vs.ada.mean.dist)) +
-  geom_point(size = 0.2, alpha = 0.3) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap()
-dist.merge %>% 
-  ggplot(aes(x = longitude, y = latitude, color = top5.any.vs.ada.mean.ratio)) +
-  geom_point(size = 0.2, alpha = 0.3) +
-  scale_color_viridis(option = "B") +
-  theme(panel.background = element_rect(fill = 'grey50')) +
-  coord_quickmap()
+diff_stations %>% 
+  select(-c(mean5_all:med5_ada)) %>% 
+  gather("measure", "distance", mean_diff:med_diff) %>% 
+  ggplot(aes(distance, fill = measure)) +
+  geom_histogram(bins = 50) +
+  facet_wrap(~ measure)
+nyc.map.4boro %>% 
+  inner_join(diff_stations, by = "BoroCT2010") %>% 
+  ggplot() +
+  geom_sf(aes(fill = med_diff)) +
+  scale_fill_viridis_c(option = "B")
+nyc.map.4boro %>% 
+  inner_join(diff_stations, by = "BoroCT2010") %>% 
+  ggplot() +
+  geom_sf(aes(fill = mean_diff)) +
+  scale_fill_viridis_c(option = "B")
 ```
 
 
-What are the rough locations under-serviced? Google map can help here, even though it's not perfect.
 
-```{r dist_sub_map, fig.width=8, fig.height=8, comment=NA, eval=FALSE}
-ggmap(nyc_map) +
-  geom_point(data = dist.merge, aes(x = longitude + 0.002, y = latitude - 0.002, color = any.vs.ada.min.dist), size = 0.2) +
-  scale_color_viridis(option = "B")  +
-  ylim(40.55, 40.915568) +  # NYC city limits latitude coordinates
-  xlim(-74.1, -73.699215) +  # NYC city limits longitude coordinates
-  xlab("Longitude") +
-  ylab("Latitude") +
-  ggtitle("Direct distance to nearest ADA-accessible subway station from point in NYC\nNormalized to distance to nearest any kind of subway station (subtraction)")
-```
+
+
+
+
+
+
 
 
 The ratio normalization doesn't really work so well, the subtraction is probably the better choice in this case.
